--- a/jiraworklog/package.json
+++ b/jiraworklog/package.json
@@ -6,10 +6,15 @@
     "base-64": "^0.1.0",
     "bootstrap": "^4.4.1",
     "bootstrap-daterangepicker": "^3.0.5",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-daterangepicker": "^4.1.0",
     "react-bootstrap-datetimerangepicker": "^2.0.4",
+    "react-date-range": "^1.0.0-beta",
+    "react-dates": "^21.5.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
