--- a/jiraworklog/package.json
+++ b/jiraworklog/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-daterangepicker": "^3.0.5",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
