--- a/jiraworklog/package.json
+++ b/jiraworklog/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "3.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
-    "semantic-ui-react-form-validator": "^1.0.2"
+    "semantic-ui-react-form-validator": "^1.0.2",
+    "superagent": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
