--- a/jiraworklog/package.json
+++ b/jiraworklog/package.json
@@ -7,6 +7,7 @@
     "base-64": "^0.1.0",
     "bootstrap": "^4.4.1",
     "bootstrap-daterangepicker": "^3.0.5",
+    "eslint": "^6.8.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
