--- a/jiraworklog/package.json
+++ b/jiraworklog/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@wojtekmaj/react-daterange-picker": "^2.5.0",
+    "axios": "^0.19.0",
     "base-64": "^0.1.0",
     "bootstrap": "^4.4.1",
     "bootstrap-daterangepicker": "^3.0.5",
@@ -13,6 +14,7 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-daterangepicker": "^4.1.0",
     "react-bootstrap-datetimerangepicker": "^2.0.4",
