--- a/jiraworklog/package.json
+++ b/jiraworklog/package.json
@@ -6,18 +6,12 @@
     "@wojtekmaj/react-daterange-picker": "^2.5.0",
     "axios": "^0.19.0",
     "base-64": "^0.1.0",
-    "bootstrap": "^4.4.1",
-    "bootstrap-daterangepicker": "^3.0.5",
     "eslint": "^6.8.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-axios": "^2.0.3",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-bootstrap-daterangepicker": "^4.1.0",
-    "react-bootstrap-datetimerangepicker": "^2.0.4",
     "react-date-range": "^1.0.0-beta",
     "react-dates": "^21.5.1",
     "react-dom": "^16.12.0",
@@ -25,8 +19,7 @@
     "react-scripts": "3.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
-    "semantic-ui-react-form-validator": "^1.0.2",
-    "superagent": "^5.1.3"
+    "semantic-ui-react-form-validator": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
